# LLM-ZOOMCAMP-PROJECT

./: .dockerignore  .gitignore  Dockerfile  PLAN.md  README.md  docker-compose.yaml  evaluate.py  init.py  main.py  pyproject.toml  results.md
app/: db.py  evaluation.py  llm.py  main.py  rag.py  search.py
database/: init.sql
grafana/: dashboard.json  init.py
ingest/: chunk.py  index.py  run.py  scrape.py
notebooks/: 01-ingestion.ipynb  02-ground-truth.ipynb  03-retrieval-eval.ipynb  04-rag-eval.ipynb  ground_truth.py
tests/: conftest.py  test_bonus_hybrid.py  test_bonus_integration.py  test_bonus_query_rewrite.py  test_bonus_reranking.py  test_db.py  test_db_queries.py  test_docker.py  test_documentation.py  test_evaluate_relevance.py  test_evaluation_llm.py  test_evaluation_metrics.py  test_evaluation_notebooks.py  test_evaluation_retrieval.py  test_grafana.py  test_ground_truth.py  test_llm.py  test_monitoring_integration.py  test_rag.py  test_ui.py  test_ui_integration.py  test_ui_session.py
